Some bug fixes: - Fix missing margin on certain pages for achived events - Fix "in event" tag showing for archived events user is not part of - Remove console log

--- a/app/mikane/src/app/pages/category/category.component.scss
+++ b/app/mikane/src/app/pages/category/category.component.scss
@@ -83,3 +83,7 @@
 .categories-list-mobile {
 	padding: 0;
 }
+
+.extra-margin {
+	margin-top: 2em;
+}
