--- a/app/mikane/src/app/pages/expenditures/expenditures.component.scss
+++ b/app/mikane/src/app/pages/expenditures/expenditures.component.scss
@@ -36,3 +36,7 @@
 		object-fit: cover;
 	}
 }
+
+.extra-margin {
+	margin-top: 22px;
+}
