--- a/app/mikane/src/app/pages/participant/participant.component.scss
+++ b/app/mikane/src/app/pages/participant/participant.component.scss
@@ -77,3 +77,7 @@
 		bottom: 110px;
 	}
 }
+
+.extra-margin {
+	padding-top: 2em;
+}
